Fixed Player spacing across all components

--- a/src/assets/scss/components/_global.scss
+++ b/src/assets/scss/components/_global.scss
@@ -7,6 +7,10 @@ html, body {
 }
 #app {
     margin-bottom: 35px;
+
+    &.is-playing {
+        margin-bottom: 135px;
+    }
 }
 .anchor {
     text-transform: uppercase;
