--- a/src/assets/scss/components/_playlist.scss
+++ b/src/assets/scss/components/_playlist.scss
@@ -1,9 +1,3 @@
-#playlists {
-    &.is-playing {
-        margin-bottom: 80px;
-    }
-}
-
 .spotify-playlist {
     overflow: hidden;
     padding: 0px;
