--- a/src/assets/scss/components/_track.scss
+++ b/src/assets/scss/components/_track.scss
@@ -1,9 +1,3 @@
-#tracks {
-    &.is-playing {
-        margin-bottom: 80px;
-    }
-}
-
 .spotify-track {
     -webkit-transition: background-color 200ms ease-in-out;
     -moz-transition: background-color 200ms ease-in-out;
